--- a/index.html
+++ b/index.html
@@ -750,7 +750,9 @@
             const pdfBase64 = await blobToBase64(pdfBlob);
             const excelBase64 = await blobToBase64(excelBlob);
 
-            const emailJsPublicKey = "2p7l9sK9Zfj6c25X1";
+            // Публичный ключ EmailJS, который вы используете
+            // ИЗМЕНЕНО: Исправлен ключ на тот, что вы указали (латинская 'l')
+            const emailJsPublicKey = "2p7l9sK9Zfj6c2SXi"; 
             const serviceID = "service_1rnpxea";
             const templateID = "template_sk137ts";
 
