--- a/index.html
+++ b/index.html
@@ -744,12 +744,11 @@
         let excelBlob;
 
         try {
-            // NOTE: Temporarily removed attachment generation and sending for debugging purposes.
-            // Uncomment the lines below to re-enable PDF and Excel attachments after the core email sending works.
-            // excelBlob = generateExcelBlob();
-            // pdfBlob = await generatePDFBlob();
-            // const pdfBase64 = await blobToBase64(pdfBlob);
-            // const excelBase64 = await blobToBase64(excelBlob);
+            // Re-enabling attachment generation and sending for PDF and Excel
+            excelBlob = generateExcelBlob();
+            pdfBlob = await generatePDFBlob();
+            const pdfBase64 = await blobToBase64(pdfBlob);
+            const excelBase64 = await blobToBase64(excelBlob);
 
             const emailJsPublicKey = "2p7l9sK9Zfj6c2SXi"; 
             const serviceID = "service_1rnpxea";
@@ -774,19 +773,18 @@
                 template_id: templateID,
                 user_id: emailJsPublicKey,
                 template_params: templateParams,
-                // NOTE: Attachment sending is temporarily disabled.
-                // attachment: [
-                //     {
-                //         name: "Опросный лист.pdf",
-                //         data: pdfBase64,
-                //         type: "application/pdf"
-                //     },
-                //     {
-                //         name: "Опросный лист.xlsx",
-                //         data: excelBase64,
-                //         type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                //     }
-                // ]
+                attachment: [ // Attachment sending is now enabled
+                    {
+                        name: "Опросный лист.pdf",
+                        data: pdfBase64,
+                        type: "application/pdf"
+                    },
+                    {
+                        name: "Опросный лист.xlsx",
+                        data: excelBase64,
+                        type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                    }
+                ]
             };
 
             const response = await fetch("https://api.emailjs.com/api/v1.0/email/send", {
