--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
         /* Стили для PDF - скрываем элементы управления, которые не нужны в PDF */
         @media print {
-            .btn, .form-control[type="file"] {
+            .btn, .form-control[type="file"], .attachment-checkbox { /* Добавлено .attachment-checkbox для скрытия чекбоксов в PDF */
                 display: none !important;
             }
             /* Убедимся, что поля формы правильно отображаются в PDF */
@@ -438,6 +438,16 @@
             </div>
         </div>
         <div class="mb-3 mt-4">
+            <!-- New checkboxes for attachment control -->
+            <div class="form-check attachment-checkbox">
+                <input class="form-check-input" type="checkbox" id="sendPdf" checked>
+                <label class="form-check-label" for="sendPdf">Отправить PDF вложение</label>
+            </div>
+            <div class="form-check attachment-checkbox mb-3">
+                <input class="form-check-input" type="checkbox" id="sendExcel" checked>
+                <label class="form-check-label" for="sendExcel">Отправить Excel вложение</label>
+            </div>
+            
             <button id="submit-button" type="button" class="btn btn-primary">Отправить</button>
         </div>
         <div class="mt-3">
@@ -724,6 +734,8 @@
         const emailInput = form.email;
         const materialSelect = form.material;
         const errorMessageDiv = document.getElementById("error-message");
+        const sendPdfCheckbox = document.getElementById("sendPdf");
+        const sendExcelCheckbox = document.getElementById("sendExcel");
 
         errorMessageDiv.style.display = 'none';
         errorMessageDiv.textContent = '';
@@ -740,15 +752,30 @@
         const email = emailInput.value;
         const material = materialSelect.value;
 
-        let pdfBlob;
-        let excelBlob;
+        let pdfBase64 = null;
+        let excelBase64 = null;
+        let attachments = [];
 
         try {
-            // Re-enabling attachment generation and sending for PDF and Excel
-            excelBlob = generateExcelBlob();
-            pdfBlob = await generatePDFBlob();
-            const pdfBase64 = await blobToBase64(pdfBlob);
-            const excelBase64 = await blobToBase64(excelBlob);
+            if (sendPdfCheckbox.checked) {
+                const pdfBlob = await generatePDFBlob();
+                pdfBase64 = await blobToBase64(pdfBlob);
+                attachments.push({
+                    name: "Опросный лист.pdf",
+                    data: pdfBase64,
+                    type: "application/pdf"
+                });
+            }
+
+            if (sendExcelCheckbox.checked) {
+                const excelBlob = generateExcelBlob();
+                excelBase64 = await blobToBase64(excelBlob);
+                attachments.push({
+                    name: "Опросный лист.xlsx",
+                    data: excelBase64,
+                    type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                });
+            }
 
             const emailJsPublicKey = "2p7l9sK9Zfj6c2SXi"; 
             const serviceID = "service_1rnpxea";
@@ -773,18 +800,8 @@
                 template_id: templateID,
                 user_id: emailJsPublicKey,
                 template_params: templateParams,
-                attachment: [ // Attachment sending is now enabled
-                    {
-                        name: "Опросный лист.pdf",
-                        data: pdfBase64,
-                        type: "application/pdf"
-                    },
-                    {
-                        name: "Опросный лист.xlsx",
-                        data: excelBase64,
-                        type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                    }
-                ]
+                // Only add attachment array if there are actual attachments
+                ...(attachments.length > 0 && { attachment: attachments }) 
             };
 
             const response = await fetch("https://api.emailjs.com/api/v1.0/email/send", {
