--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <input type="text" id="company" name="company" class="form-control" required>
                 </div>
                 <div class="mb-3">
-                    <label for="contact_person" class="form-label">Контактное лицо</</label>
+                    <label for="contact_person" class="form-label">Контактное лицо</label>
                     <input type="text" id="contact_person" name="contact_person" class="form-control">
                 </div>
                 <div class="mb-3">
@@ -545,12 +545,14 @@
                     preview.src = e.target.result;
                     preview.style.display = "block";
                     input.dataset.jpeg = e.target.result; // Сохраняем Data URL для PDF
+                    console.log(`Image Data URL for ${materialType}:`, e.target.result.substring(0, 100) + '...'); // Log a portion of the data URL
                 };
                 reader.readAsDataURL(file);
             } else {
                 preview.style.display = "none";
                 preview.src = "";
                 input.dataset.jpeg = ""; // Очищаем Data URL
+                console.log(`Image cleared for ${materialType}`);
             }
         });
     }
@@ -714,7 +716,7 @@
         const opt = {
             filename: 'oprosny_list.pdf',
             html2canvas: { scale: 2, useCORS: true },
-            jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' },
+            jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' , margin: [10, 10, 10, 10] }, // Added margin
             pagebreak: { mode: ['avoid-all', 'css', 'legacy'] }
         };
 
@@ -755,8 +757,20 @@
         let pdfBase64 = null;
         let excelBase64 = null;
         let attachments = [];
+        let installationPhotoDataUrl = null; // Variable to store the photo data URL
 
         try {
+            // Get the current material type to retrieve the correct photo data
+            const currentMaterialSection = document.querySelector(`.analyzer-section[style*="block"]`);
+            if (currentMaterialSection) {
+                const photoInput = currentMaterialSection.querySelector('input[type="file"]');
+                if (photoInput && photoInput.dataset.jpeg) {
+                    installationPhotoDataUrl = photoInput.dataset.jpeg;
+                    console.log("Photo Data URL to be sent:", installationPhotoDataUrl.substring(0, 100) + '...');
+                }
+            }
+
+
             if (sendPdfCheckbox.checked) {
                 const pdfBlob = await generatePDFBlob();
                 pdfBase64 = await blobToBase64(pdfBlob);
@@ -765,6 +779,7 @@
                     data: pdfBase64,
                     type: "application/pdf"
                 });
+                console.log("PDF Base64 generated. Length:", pdfBase64 ? pdfBase64.length : 0);
             }
 
             if (sendExcelCheckbox.checked) {
@@ -775,6 +790,7 @@
                     data: excelBase64,
                     type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                 });
+                console.log("Excel Base64 generated. Length:", excelBase64 ? excelBase64.length : 0);
             }
 
             const emailJsPublicKey = "2p7l9sK9Zfj6c2SXi"; 
@@ -793,6 +809,8 @@
                 material: material,
                 subject: `Опросный лист от ${form.company.value || 'Неизвестной компании'} (${form.date.value || 'Неизвестной даты'})`,
                 time: new Date().toISOString(),
+                // Add the installation photo Data URL to template params if available
+                installation_photo_url: installationPhotoDataUrl || '' 
             };
 
             const requestBody = {
