--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 <script>
     // URL для вашего Google Apps Script Web App.
     // Замените этот placeholder на фактический URL после развертывания скрипта.
-    const GOOGLE_SHEET_WEB_APP_URL = 'YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE'; // Замените на ваш URL
+    const GOOGLE_SHEET_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbx5AcbQMfdCX2hmkOvf7DqLu-IfpZzb2ia48WqfNQYiWeXgsk-nMJKxIAceDt2S3GkoYA/exec'; // Заменено на ваш URL
 
     const dynamicElementData = {};
 
