--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Опросный лист по техпроцессу</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- EmailJS SDK остается, но мы его не инициализируем напрямую в коде.
-         Он может быть нужен для других целей или для отладки, но отправка идет через fetch. -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <!-- EmailJS SDK удален, так как отправка теперь идет только через Google Apps Script. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
@@ -798,7 +796,7 @@
         let pdfBase64 = null;
         let excelBase64 = null;
         let installationPhotoDataUrl = null; 
-        let emailJsAttachments = [];
+        // let emailJsAttachments = []; // Удалено, так как EmailJS больше не используется
         let formDataForGoogleSheet = {};
 
         try {
@@ -838,83 +836,28 @@
             if (sendPdfCheckbox.checked) {
                 const pdfBlob = await generatePDFBlob();
                 pdfBase64 = await blobToBase64(pdfBlob);
-                emailJsAttachments.push({
-                    name: "Опросный лист.pdf",
-                    data: pdfBase64,
-                    type: "application/pdf"
-                });
+                // attachments.push({ // Эти вложения будут отправлены через Apps Script, не через EmailJS
+                //     name: "Опросный лист.pdf",
+                //     data: pdfBase64,
+                //     type: "application/pdf"
+                // });
                 console.log("PDF Base64 generated. Length:", pdfBase64 ? pdfBase64.length : 0);
             }
 
             if (sendExcelCheckbox.checked) {
                 const excelBlob = generateExcelBlob();
                 excelBase64 = await blobToBase64(excelBlob);
-                emailJsAttachments.push({
-                    name: "Опросный лист.xlsx",
-                    data: excelBase64,
-                    type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                });
+                // attachments.push({ // Эти вложения будут отправлены через Apps Script, не через EmailJS
+                //     name: "Опросный лист.xlsx",
+                //     data: excelBase64,
+                //     type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                // });
                 console.log("Excel Base64 generated. Length:", excelBase64 ? excelBase64.length : 0);
             }
 
-            // --- Отправка в EmailJS ---
-            // Будет выполнена, если attachments.length > 0
-            if (emailJsAttachments.length > 0 || !sendPdfCheckbox.checked && !sendExcelCheckbox.checked) { // Отправляем, даже если нет вложений, для базового письма
-                const emailJsPublicKey = "2p7l9sK9Zfj6c2SXi"; 
-                const serviceID = "service_1rnpxea";
-                const templateID = "template_sk137ts";
-
-                const templateParams = {
-                    to: `science.techade@gmail.com`,
-                    email: email,
-                    company: form.company.value || 'Не указано',
-                    date: form.date.value || 'Не указано',
-                    contact_person: form.contact_person.value || 'Не указано',
-                    phone: form.phone.value ? form.phone.value.replace(/\D/g, '') : 'Не указано',
-                    country: form.country.value || 'Не указано',
-                    location: form.location.value || 'Не указано',
-                    material: material,
-                    subject: `Опросный лист от ${form.company.value || 'Неизвестной компании'} (${form.date.value || 'Неизвестной даты'})`,
-                    time: new Date().toISOString(),
-                    installation_photo_url: installationPhotoDataUrl || '' 
-                };
-
-                const requestBody = {
-                    service_id: serviceID,
-                    template_id: templateID,
-                    user_id: emailJsPublicKey,
-                    template_params: templateParams,
-                    ...(emailJsAttachments.length > 0 && { attachment: emailJsAttachments }) 
-                };
-
-                try {
-                    const response = await fetch("https://api.emailjs.com/api/v1.0/email/send", {
-                        method: "POST",
-                        headers: {
-                            "Content-Type": "application/json"
-                        },
-                        body: JSON.stringify(requestBody)
-                    });
-
-                    if (response.ok) {
-                        alert("Опросный лист успешно отправлен (EmailJS)!");
-                    } else {
-                        const errorText = await response.text();
-                        console.error("Ошибка EmailJS:", errorText);
-                        // Проверяем, если это ошибка, связанная с размером или форматом вложений
-                        if (errorText.includes("The parameters are invalid") || response.status === 413) { // 413 Payload Too Large
-                            throw new Error(`Ошибка EmailJS: Вложения слишком большие или некорректны. Попробуйте отправить без них. Подробнее: ${response.status} - ${errorText}`);
-                        } else {
-                            throw new Error(`Ошибка EmailJS: ${response.status} - ${errorText}`);
-                        }
-                    }
-                } catch (emailJsErr) {
-                    console.error("Ошибка при отправке через EmailJS:", emailJsErr);
-                    errorMessageDiv.textContent = `Ошибка EmailJS: ${emailJsErr.message || "Неизвестная ошибка EmailJS."}`;
-                    errorMessageDiv.style.display = 'block';
-                    // Если EmailJS не сработал, все равно пытаемся отправить в Google Sheet
-                }
-            }
+            // --- Отправка в EmailJS (УДАЛЕНО) ---
+            // Вся логика EmailJS была удалена, так как она вызывала проблемы с вложениями
+            // и Google Apps Script теперь полностью выполняет эту задачу.
 
 
             // --- Отправка в Google Sheet ---
@@ -925,10 +868,10 @@
                 company: form.company.value || '',
                 contact_person: form.contact_person.value || '',
                 phone: form.phone.value || '',
-                email: form.email.value || '',
+                email: email, // Используем email напрямую
                 country: form.country.value || '',
                 location: form.location.value || '',
-                material_type: material, // Using a different name to distinguish from general 'material'
+                material_type: material, 
                 
                 // Динамические элементы
                 'elements-ca-u': formDataForGoogleSheet['elements-ca-u'] || '',
