--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         .element-row { display: flex; gap: 10px; margin-bottom: 10px; }
         .element-row input { flex: 1; }
         .element-row button { white-space: nowrap; }
-        .analyzer-section, .conditional-block { display: none; margin-top: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 5-px; background-color: #f9f9f9; }
+        .analyzer-section, .conditional-block { display: none; margin-top: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 5px; background-color: #f9f9f9; }
         /* Стили для обязательных полей */
         .required-field::after {
             content: " *";
