--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
             // Проверка успеха должна быть сделана на стороне Apps Script.
             // Для отладки в браузере, можно ориентироваться на отсутствие ошибок сети.
             console.log("Запрос в Google Sheet отправлен. Ответ (может быть пустым из-за no-cors mode):", response);
-            alert("Данные также отправлены в Google Таблицу!");
+            alert("Данные отправлены!"); // Изменено на "Данные отправлены!"
 
         } catch (error) {
             console.error("Ошибка при отправке в Google Sheet:", error);
